@@ -95,8 +95,8 @@
         <property name="title">
          <string>&amp;Help</string>
         </property>
-		<addaction name="helpConfigureAction"/>
-		<addaction name="separator"/>
+        <addaction name="helpConfigureAction"/>
+        <addaction name="separator"/>
         <addaction name="helpAboutAction"/>
         <addaction name="helpAboutQtAction"/>
        </widget>
@@ -115,7 +115,7 @@
        <string>Drum Kit</string>
       </property>
       <layout class="QGridLayout">
-       <item row="0" column="0" colspan="4">
+       <item row="0" column="0" rowspan="2" colspan="4">
         <widget class="drumkv1widget_elements" name="Elements" />
        </item>
        <item row="0" column="4" colspan="9">
@@ -210,7 +210,20 @@
          </layout>
         </widget>
        </item>
-       <item row="1" column="0" rowspan="2" colspan="5">
+       <item row="1" column="4" colspan="9">
+        <spacer>
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint">
+          <size>
+           <width>8</width>
+           <height>0</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="2" column="0" rowspan="2" colspan="5">
         <widget class="QGroupBox" name="Dcf1GroupBox">
          <property name="title">
           <string>DCF</string>
@@ -331,7 +344,7 @@
          </layout>
         </widget>
        </item>
-       <item row="1" column="5" rowspan="2" colspan="8">
+       <item row="2" column="5" rowspan="2" colspan="8">
         <widget class="QGroupBox" name="Lfo1GroupBox">
          <property name="title">
           <string>LFO</string>
@@ -531,7 +544,7 @@
          </layout>
         </widget>
        </item>
-       <item row="3" column="0" colspan="5">
+       <item row="4" column="0" colspan="5">
         <widget class="QGroupBox" name="Dca1GroupBox">
          <property name="title">
           <string>DCA</string>
@@ -597,7 +610,7 @@
          </layout>
         </widget>
        </item>
-       <item row="3" column="5" colspan="5">
+       <item row="4" column="5" colspan="5">
         <widget class="QGroupBox" name="Def1GroupBox">
          <property name="title">
           <string>DEF</string>
@@ -666,7 +679,7 @@
          </layout>
         </widget>
        </item>
-       <item row="3" column="10" colspan="3">
+       <item row="4" column="10" colspan="3">
         <widget class="QGroupBox" name="Out1GroupBox">
          <property name="title">
           <string>OUT</string>
@@ -717,19 +730,6 @@
           </item>
          </layout>
         </widget>
-       </item>
-       <item row="4" column="0" colspan="12">
-        <spacer>
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint">
-          <size>
-           <width>8</width>
-           <height>4</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
      </widget>
